--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.6.5",
+    "i18next": "^24.2.3",
     "lucide-react": "^0.292.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
@@ -38,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^6.18.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.0.0",
