--- a/package.json
+++ b/package.json
@@ -12,26 +12,43 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.1.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-context-menu": "^2.2.7",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.1.7",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.2.7",
+    "@radix-ui/react-toggle": "^1.1.3",
+    "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.73.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.6.5",
     "i18next": "^24.2.3",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.292.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
@@ -40,10 +57,13 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.18.0",
+    "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -52,6 +72,7 @@
     "@types/node": "^20.17.30",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/recharts": "^1.8.29",
     "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
